# ai-cli

./: Cargo.toml  LICENSE  README.md
src/: command.rs  config.rs  main.rs  openai.rs
