[package]
name = "ai-cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { version = "0.32.4", features = ["chat-completion"] }
clap = { version = "4.5.57", features = ["cargo", "string"] }
confy = { version = "1.0.0", features = ["toml_conf"] }
log = "0.4.29"
serde = "1.0.228"
simple_logger = "5.1.0"
tokio = { version = "1.49.0", features = ["rt","macros"] }
